[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
actix-web = "3"
env_logger = "0.9.0"